--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,6 @@
 
   <link rel="stylesheet" href="{{ '/assets/css/tailwind.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-    integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-  <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
   <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -26,28 +23,25 @@
 </head>
 
 <body>
-  <div>
-    {% include navigation.html %}
+  {% include navigation.html %}
 
-    <div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center sm:py-12">
-      <div class="relative py-3 sm:max-w-xl sm:mx-auto">
-        <div
-          class="absolute inset-0 bg-gradient-to-r from-green-400 to-lime-300 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
-        </div>
-        <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
-          {{ content }}
-        </div>
+  <div class="min-h-screen bg-gray-100 py-6 flex flex-col justify-center sm:py-12">
+    <div class="relative py-3 sm:max-w-4xl sm:mx-auto">
+      <div
+        class="absolute inset-0 bg-gradient-to-r from-green-400 to-lime-300 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
+      </div>
+      <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
+        <!-- Content -->
+        {{ content }}
+        <!-- Content End -->
       </div>
     </div>
-
-    {% include footer.html %}
-
   </div>
-    
+
   {% if jekyll.environment == "production" %}
-    {% if site.google_analytics %}
-      {% include google_analytics.html %}
-    {% endif %}
+  {% if site.google_analytics %}
+  {% include google_analytics.html %}
+  {% endif %}
   {% endif %}
 </body>
 
