--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,78 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
-
-{{ content }}
+<article class="xl:divide-y xl:divide-gray-200">
+    <!-- Page Header -->
+    <header class="pt-6 xl:pb-10">
+        <div class="space-y-1 text-center">
+            <dl class="space-y-10">
+                <div>
+                    <dt class="sr-only">Published on</dt>
+                    <dd class="text-base leading-6 font-medium text-gray-500"><time datetime="{{ post.date | date: "
+                            %FT%T" }}">{{ post.date | date: "%A, %B %e, %Y" }}</time></dd>
+                </div>
+            </dl>
+            <div>
+                <h1
+                    class="text-3xl leading-9 font-extrabold text-gray-900 tracking-tight sm:text-4xl sm:leading-10 md:text-5xl md:leading-14">
+                    {{ page.title }}</h1>
+            </div>
+        </div>
+    </header>
+    <!-- Page Header End -->
+    <div class="divide-y xl:divide-y-0 divide-gray-200 xl:grid xl:grid-cols-4 xl:col-gap-6 pb-16 xl:pb-20"
+        style="grid-template-rows: auto 1fr;">
+        <!-- Author -->
+        <dl class="pt-6 pb-10 xl:pt-11 xl:border-b xl:border-gray-200">
+            <dt class="sr-only">Authors</dt>
+            <dd>
+                <ul class="flex justify-center xl:block space-x-8 sm:space-x-12 xl:space-x-0 xl:space-y-8">
+                    <li class="flex items-center space-x-2">
+                        <img src="{{ page.author_avatar }}" alt="" class="w-10 h-10 rounded-full" />
+                        <dl class="text-sm font-medium leading-5 whitespace-no-wrap">
+                            <dt class="sr-only">Name</dt>
+                            <dd class="text-gray-900">{{ page.author_name }}</dd>
+                            <dt class="sr-only">Twitter</dt>
+                            <dd><a href="https://twitter.com/{{ page.author_twitter }}"
+                                    class="text-teal-500 hover:text-teal-600">@{{ page.author_twitter }}</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </dd>
+        </dl>
+        <!-- Author End -->
+        <!-- Content -->
+        <div class="divide-y divide-gray-200 xl:pb-0 xl:col-span-3 xl:row-span-2">
+            <div class="prose max-w-none pt-10 pb-8">
+                {{ content }}
+            </div>
+            <!-- Content Footer -->
+            <div class="pt-6 pb-16">
+                <p>
+                    <a href="https://twitter.com/{{ page.author_twitter }}"
+                        class="font-medium text-teal-500 hover:text-teal-600"> Follow {{ page.author | capitalize }} on
+                        Twitter → </a>
+                </p>
+            </div>
+            <!-- Content Footer End -->
+        </div>
+        <!-- Content End -->
+        <!-- Page Footer -->
+        <footer class="text-sm font-medium leading-5 divide-y divide-gray-200 xl:col-start-1 xl:row-start-2">
+            <!-- <div class="space-y-8 py-8">
+                <div>
+                    <h2 class="text-xs tracking-wide uppercase text-gray-500">Next Article</h2>
+                    <div class="text-teal-500 hover:text-teal-600"><a href="next_article_url">next_article_title</a>
+                    </div>
+                </div>
+                <div>
+                    <h2 class="text-xs tracking-wide uppercase text-gray-500">Previous Article</h2>
+                    <div class="text-teal-500 hover:text-teal-600"><a
+                            href="previous_article_url">previous_article_title</a></div>
+                </div>
+            </div> -->
+            <div class="pt-8"><a class="text-teal-500 hover:text-teal-600" href="/">← Back to the blog</a></div>
+        </footer>
+        <!-- Page Footer End -->
+    </div>
+</article>
